# claudforge

./: .gitignore  AGENTS.md  BRAND.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL_TEMPLATE.md  humans.txt  index.html  pyproject.toml  requirements.txt  robots.txt  style.css  upload_batch_skills.py  upload_single_skill.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-skills.yml  lint.yml  publish.yml  test.yml
claudforge/: cli.py
claudforge/browser/: launcher.py
claudforge/dashboard/: app.py
claudforge/uploader/: batch.py  single.py  uninstaller.py
claudforge/utils/: archive.py  browser_profiles.py  config.py  history.py  logger.py  updater.py  yaml_parser.py  zipper.py
scratch/: test_cdp.py
tests/: __init__.py  capture_visuals.py  test_basic.py  test_browser_profiles.py  test_yaml_parser.py
website/: changelog.html  claudforge_data.json  docs.html  index.html  robots.txt  script.js  sitemap.xml  style.css
website/archive/v1/: index.html  style.css
website/assets/favicon/: site.webmanifest
