[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudforge"
version = "2.0.0"
description = "The high-performance CLI suite for Claude.ai Skills automation."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Vinu Balagopal A P", email = "[vinubalagopalap@gmail.com]"}
]
keywords = ["claude", "ai", "skills", "automation", "cli", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "playwright>=1.41.0",
    "pyyaml>=6.0.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
claudforge = "claudforge.cli:main"

[project.urls]
Homepage = "https://github.com/VinuBalagopalAP/claudforge"
Issues = "https://github.com/VinuBalagopalAP/claudforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["claudforge"]

[tool.hatch.build.targets.sdist]
include = [
    "/claudforge",
    "README.md",
    "LICENSE",
]
